// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media List renders with custom layout 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 120px;
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-2 {
    margin: -12px -4px 0 -4px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -12px -4px 0 -4px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -12px -4px 0 -4px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -12px -8px 0 -8px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -12px -8px 0 -8px;
  }
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    margin-top: 12px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
  }
}

.emotion-4 {
  box-sizing: border-box;
  overflow: hidden;
  border-style: solid;
  border-radius: 12px;
  border-width: 1px;
  border-color: #DEE2E5;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
}

.emotion-4:hover:not(:disabled) {
  box-shadow: 0 8px 16px 0 rgba(10,10,10,0.08);
}

.emotion-4 svg {
  display: block;
}

.emotion-5 {
  box-sizing: border-box;
  display: block;
  position: relative;
  margin-bottom: 0;
}

.emotion-5 svg {
  border-radius: 4px;
}

.emotion-6 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 66%;
  height: 0;
  width: 100%;
  border-radius: 8px;
  background-color: #F0F1F3;
}

.emotion-6 svg {
  fill: #C0C7CC;
}

.emotion-7 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-8 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

.emotion-9 {
  box-sizing: border-box;
}

.emotion-10 {
  box-sizing: border-box;
  padding: 24px;
}

.emotion-10 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-11 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-11 .nk-headline-kicker {
  color: #3358CC;
}

.emotion-11:hover:not(:disabled) .nk-headline-kicker {
  color: #254CAC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11:active:not(:disabled) .nk-headline-kicker {
  color: #14328D;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11:visited:not(:disabled) .nk-headline-kicker {
  color: #6454E3;
}

.emotion-11 .nk-headline-heading {
  color: #2E3F54;
}

.emotion-11:hover:not(:disabled) .nk-headline-heading {
  color: #254CAC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11:active:not(:disabled) .nk-headline-heading {
  color: #14328D;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11:visited:not(:disabled) .nk-headline-heading {
  color: #6454E3;
}

.emotion-11:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-12 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-12 svg {
  fill: #2E3F54;
}

.emotion-12::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-12::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-13 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-13 {
    padding: 0 8px;
    margin-top: 12px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-13 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-13 {
    padding: 0 12px;
  }
}

.emotion-14 {
  box-sizing: border-box;
  overflow: hidden;
  border-radius: 4px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
}

.emotion-14 svg {
  display: block;
}

.emotion-16 {
  box-sizing: border-box;
  padding: 8px 4px;
}

.emotion-16 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-17 {
  margin-bottom: 20px;
}

.emotion-18 {
  font-family: "Poppins",sans-serif;
  font-size: 20px;
  line-height: 22.5px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-18::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-18::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-19 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-19 svg {
  fill: #09111C;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <picture
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                />
                <img
                  alt="Card Media"
                  class="emotion-8"
                  src="static/placeholder-16x9.png"
                />
              </picture>
            </div>
            <div
              class="emotion-9"
            >
              <div
                class="emotion-10"
              >
                <a
                  class="nk-card-link emotion-11"
                  href="/"
                >
                  <p
                    class="emotion-12"
                  >
                    interactive card
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-13"
        >
          <div
            class="emotion-14"
          >
            <div
              class="emotion-9"
            >
              <div
                class="emotion-16"
              >
                <div
                  class="emotion-17"
                >
                  <section
                    class="emotion-18"
                  >
                    <h3
                      class="nk-headline-heading emotion-19"
                    >
                      static
                    </h3>
                  </section>
                </div>
                <p
                  class="emotion-12"
                >
                  card with optional title 
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Media List renders with default layout 1`] = `
<DocumentFragment>
  .emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-2 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -48px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -48px -12px 0 -12px;
  }
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    margin-top: 48px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
  }
}

.emotion-4 {
  box-sizing: border-box;
  overflow: hidden;
  border-style: solid;
  border-radius: 12px;
  border-width: 1px;
  border-color: #DEE2E5;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
}

.emotion-4:hover:not(:disabled) {
  box-shadow: 0 8px 16px 0 rgba(10,10,10,0.08);
}

.emotion-4 svg {
  display: block;
}

.emotion-5 {
  box-sizing: border-box;
  display: block;
  position: relative;
  margin-bottom: 0;
}

.emotion-5 svg {
  border-radius: 4px;
}

.emotion-6 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 66%;
  height: 0;
  width: 100%;
  border-radius: 8px;
  background-color: #F0F1F3;
}

.emotion-6 svg {
  fill: #C0C7CC;
}

.emotion-7 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-8 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

.emotion-9 {
  box-sizing: border-box;
}

.emotion-10 {
  box-sizing: border-box;
  padding: 24px;
}

.emotion-10 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-11 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-11 .nk-headline-kicker {
  color: #3358CC;
}

.emotion-11:hover:not(:disabled) .nk-headline-kicker {
  color: #254CAC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11:active:not(:disabled) .nk-headline-kicker {
  color: #14328D;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11:visited:not(:disabled) .nk-headline-kicker {
  color: #6454E3;
}

.emotion-11 .nk-headline-heading {
  color: #2E3F54;
}

.emotion-11:hover:not(:disabled) .nk-headline-heading {
  color: #254CAC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11:active:not(:disabled) .nk-headline-heading {
  color: #14328D;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11:visited:not(:disabled) .nk-headline-heading {
  color: #6454E3;
}

.emotion-11:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-12 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-12 svg {
  fill: #2E3F54;
}

.emotion-12::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-12::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-14 {
  box-sizing: border-box;
  overflow: hidden;
  border-radius: 4px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
}

.emotion-14 svg {
  display: block;
}

.emotion-16 {
  box-sizing: border-box;
  padding: 8px 4px;
}

.emotion-16 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-17 {
  margin-bottom: 20px;
}

.emotion-18 {
  font-family: "Poppins",sans-serif;
  font-size: 20px;
  line-height: 22.5px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-18::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-18::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-19 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-19 svg {
  fill: #09111C;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <picture
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                />
                <img
                  alt="Card Media"
                  class="emotion-8"
                  src="static/placeholder-16x9.png"
                />
              </picture>
            </div>
            <div
              class="emotion-9"
            >
              <div
                class="emotion-10"
              >
                <a
                  class="nk-card-link emotion-11"
                  href="/"
                >
                  <p
                    class="emotion-12"
                  >
                    interactive card
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-14"
          >
            <div
              class="emotion-9"
            >
              <div
                class="emotion-16"
              >
                <div
                  class="emotion-17"
                >
                  <section
                    class="emotion-18"
                  >
                    <h3
                      class="nk-headline-heading emotion-19"
                    >
                      static
                    </h3>
                  </section>
                </div>
                <p
                  class="emotion-12"
                >
                  card with optional title 
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Media List renders with feature cardscards 1`] = `
<DocumentFragment>
  .emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-2 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -48px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -48px -12px 0 -12px;
  }
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    margin-top: 48px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
  }
}

.emotion-4 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
  display: block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: color,fill;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: color,fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4:hover:not(:disabled) {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4>span>div {
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

@media screen {
  .emotion-6 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-6 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-6 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-6 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-6 {
    display: none;
  }
}

.emotion-7 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
}

@media screen and (min-width: 768px) {
  .emotion-7 {
    min-height: 248px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-7 {
    min-height: 304px;
  }
}

.emotion-7 svg {
  display: block;
}

.emotion-8 {
  box-sizing: border-box;
  display: block;
  position: relative;
  margin-bottom: 0;
}

.emotion-8 svg {
  border-radius: 4px;
}

.emotion-9 {
  -webkit-background-size: cover;
  background-size: cover;
  -webkit-background-position: right bottom;
  background-position: right bottom;
  height: 18vh;
}

@media screen and (min-width: 1024px) {
  .emotion-9 {
    height: 200px;
  }
}

.emotion-10 {
  box-sizing: border-box;
}

.emotion-11 {
  box-sizing: border-box;
  padding: 24px;
}

.emotion-11 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

@media screen and (max-width: 1023px) {
  .emotion-12 {
    margin-bottom: 20px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-12 {
    margin-bottom: 24px;
  }
}

@media screen and (max-width: 1023px) {
  .emotion-13 {
    font-family: "Poppins",sans-serif;
    font-size: 28px;
    line-height: 31.5px;
    font-weight: 700;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-13::before {
    content: '';
    margin-bottom: -0.2155em;
    display: block;
  }

  .emotion-13::after {
    content: '';
    margin-top: -0.2125em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-13 {
    font-family: "Poppins",sans-serif;
    font-size: 36px;
    line-height: 40.5px;
    font-weight: 700;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-13::before {
    content: '';
    margin-bottom: -0.2155em;
    display: block;
  }

  .emotion-13::after {
    content: '';
    margin-top: -0.2125em;
    display: block;
  }
}

.emotion-14 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #FFFFFF;
}

.emotion-14 svg {
  fill: #FFFFFF;
}

@media screen and (max-width: 1023px) {
  .emotion-15 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-15 {
    margin-bottom: 32px;
  }
}

.emotion-16 {
  margin: 0;
  color: rgba(255,255,255,0.8);
}

.emotion-16 svg {
  fill: rgba(255,255,255,0.8);
}

@media screen and (max-width: 1023px) {
  .emotion-16 {
    font-family: "Poppins",sans-serif;
    font-size: 16px;
    line-height: 24px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-16::before {
    content: '';
    margin-bottom: -0.403em;
    display: block;
  }

  .emotion-16::after {
    content: '';
    margin-top: -0.4em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-16 {
    font-family: "Poppins",sans-serif;
    font-size: 20px;
    line-height: 30px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-16::before {
    content: '';
    margin-bottom: -0.403em;
    display: block;
  }

  .emotion-16::after {
    content: '';
    margin-top: -0.4em;
    display: block;
  }
}

.emotion-17 {
  margin-bottom: 8px;
}

.emotion-18 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(2, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  min-width: 64px;
  min-height: 32px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  min-width: 64px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
}

.emotion-18 svg {
  width: 16px;
  height: 16px;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-18 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-18 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-19 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-19::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-19::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-20 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E3F54;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-20 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-20 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-20.emotion-20 {
  width: 24px;
  height: 24px;
}

@media screen {
  .emotion-22 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-22 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-22 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-22 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-22 {
    display: block;
  }
}

.emotion-23 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  transition-property: box-shadow;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
}

@media screen and (min-width: 768px) {
  .emotion-23 {
    min-height: 248px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-23 {
    min-height: 304px;
  }
}

.emotion-23 svg {
  display: block;
}

.emotion-24 {
  box-sizing: border-box;
  display: block;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 0;
}

.emotion-24 svg {
  border-radius: 4px;
}

.emotion-25 {
  height: 100%;
}

.emotion-26 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-27 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media screen and (max-width: 479px) {
  .emotion-27 {
    padding: 16px;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-27 {
    padding: 16px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-27 {
    padding: 24px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-27 {
    padding: 32px;
  }
}

.emotion-27 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-32 {
  margin-bottom: 24px;
}

.emotion-34 {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.emotion-42 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
  height: 100%;
}

.emotion-42 svg {
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <a
            class="emotion-4"
            href="/"
          >
            <span
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    />
                  </div>
                  <div
                    class="emotion-10"
                  >
                    <div
                      class="emotion-11"
                    >
                      <div
                        class="emotion-12"
                      >
                        <section
                          class="emotion-13"
                        >
                          <h1
                            class="nk-headline-heading emotion-14"
                          >
                            Feature Card 1
                          </h1>
                        </section>
                      </div>
                      <div
                        class="emotion-15"
                      >
                        <p
                          class="emotion-16"
                        >
                          This is a feature card.
                        </p>
                      </div>
                      <div
                        class="emotion-17"
                      >
                        <button
                          class="emotion-18"
                          data-testid="button"
                          type="button"
                        >
                          <span
                            class="emotion-19"
                          >
                            needHelpCard
                          </span>
                          <svg
                            aria-hidden="true"
                            class="emotion-20 emotion-21"
                            fill="currentColor"
                            focusable="false"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="emotion-22"
              >
                <div
                  class="emotion-23"
                >
                  <div
                    class="emotion-24"
                  >
                    <div
                      class="emotion-25"
                    />
                  </div>
                  <div
                    class="emotion-26"
                  >
                    <div
                      class="emotion-27"
                    >
                      <div
                        class="emotion-28"
                      >
                        <div
                          class="emotion-12"
                        >
                          <section
                            class="emotion-13"
                          >
                            <h1
                              class="nk-headline-heading emotion-14"
                            >
                              Feature Card 1
                            </h1>
                          </section>
                        </div>
                        <div
                          class="emotion-32"
                        >
                          <p
                            class="emotion-16"
                          >
                            <span
                              class="emotion-34"
                            >
                              This is a feature card.
                            </span>
                          </p>
                        </div>
                        <button
                          class="emotion-18"
                          data-testid="button"
                          type="button"
                        >
                          <span
                            class="emotion-19"
                          >
                            needHelpCard
                          </span>
                          <svg
                            aria-hidden="true"
                            class="emotion-20 emotion-21"
                            fill="currentColor"
                            focusable="false"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </span>
          </a>
        </div>
        <div
          class="emotion-3"
        >
          <a
            class="emotion-4"
            href="/"
          >
            <span
              class="emotion-5"
            >
              <div
                class="emotion-42"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-11"
                  >
                    <div
                      class="emotion-12"
                    >
                      <section
                        class="emotion-13"
                      >
                        <h3
                          class="nk-headline-heading emotion-14"
                        >
                          Feature Card 2
                        </h3>
                      </section>
                    </div>
                    <div
                      class="emotion-15"
                    >
                      <p
                        class="emotion-16"
                      >
                        This is a feature card.
                      </p>
                    </div>
                    <div
                      class="emotion-17"
                    >
                      <button
                        class="emotion-18"
                        data-testid="button"
                        type="button"
                      >
                        <span
                          class="emotion-19"
                        >
                          needHelpCard
                        </span>
                        <svg
                          aria-hidden="true"
                          class="emotion-20 emotion-21"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                          <path
                            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Media List renders with usage cards 1`] = `
<DocumentFragment>
  .emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-2 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -48px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -48px -12px 0 -12px;
  }
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    margin-top: 48px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
  }
}

.emotion-4 {
  position: relative;
}

.emotion-5 {
  position: absolute;
  right: 16px;
  top: 16px;
  z-index: 1;
}

.emotion-6 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  width: 32px;
  height: 32px;
  min-height: 32px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-style: solid;
  border-color: #007B22;
  background-color: #E5F4EA;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-6 svg {
  width: 16px;
  height: 16px;
}

.emotion-6 svg {
  fill: #007B22;
}

.emotion-7 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #007B22;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-7 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-7 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7.emotion-7 {
  width: 24px;
  height: 24px;
  fill: #007B22;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-7.emotion-7 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-7.emotion-7 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-9 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  box-sizing: border-box;
}

.emotion-11 {
  box-sizing: border-box;
  padding: 0;
}

.emotion-11 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-12 {
  margin-bottom: 16px;
}

.emotion-13 {
  border-style: solid;
  border-color: #007B22;
  border-width: 4px;
  border-radius: 4px;
  border-width: 0px;
  margin: 0;
  border-top-width: 4px;
  width: 100%;
}

.emotion-15 {
  font-family: "Poppins",sans-serif;
  font-size: 24px;
  line-height: 27px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-15::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-15::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-16 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #007B22;
}

.emotion-16 svg {
  fill: #007B22;
}

.emotion-18 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-18 svg {
  fill: #2E3F54;
}

.emotion-18::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-18::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-22 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  width: 32px;
  height: 32px;
  min-height: 32px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-style: solid;
  border-color: #D60000;
  background-color: #FEECEC;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-22 svg {
  width: 16px;
  height: 16px;
}

.emotion-22 svg {
  fill: #D60000;
}

.emotion-23 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #D60000;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-23 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-23 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-23.emotion-23 {
  width: 24px;
  height: 24px;
  fill: #D60000;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-23.emotion-23 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-23.emotion-23 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-29 {
  border-style: solid;
  border-color: #D60000;
  border-width: 4px;
  border-radius: 4px;
  border-width: 0px;
  margin: 0;
  border-top-width: 4px;
  width: 100%;
}

.emotion-32 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #D60000;
}

.emotion-32 svg {
  fill: #D60000;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
                data-testid="flag"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-7 emotion-8"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="emotion-9"
            >
              <div
                class="emotion-10"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-12"
                  >
                    <hr
                      aria-hidden="true"
                      class="emotion-13"
                      data-testid="divider"
                    />
                    <div
                      class="emotion-12"
                    />
                    <section
                      class="emotion-15"
                    >
                      <h1
                        class="nk-headline-heading emotion-16"
                      >
                        Do
                      </h1>
                    </section>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <p
                      class="emotion-18"
                    >
                      UsageCard Do
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-22"
                data-testid="flag"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-23 emotion-8"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="emotion-9"
            >
              <div
                class="emotion-10"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-12"
                  >
                    <hr
                      aria-hidden="true"
                      class="emotion-29"
                      data-testid="divider"
                    />
                    <div
                      class="emotion-12"
                    />
                    <section
                      class="emotion-15"
                    >
                      <h1
                        class="nk-headline-heading emotion-32"
                      >
                        Don’t
                      </h1>
                    </section>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <p
                      class="emotion-18"
                    >
                      UsageCard Dont
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
